--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <section>
+      
+    </section>
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
